--- a/test/index.html
+++ b/test/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <base href="/">
-    <title>{{title}}</title>
+    <title>Test title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
   <body>
-    <h1>{{ title }}</h1>
+    <h1>Test title</h1>
     <backstage-app>Loading...</backstage-app>
-  </body>
 </html>
